feat: Improve theme contrast and accessibility
Introduce `--c-on-accent` color variable for better text contrast on accent backgrounds. Update various components to use this new variable for improved readability and a more polished user experience. Also, disable auto theme switching by default for consistent display.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
               secondary: 'var(--c-secondary)',
               accent: 'var(--c-accent)',
               'accent-hover': 'var(--c-accent-hover)',
+              'on-accent': 'var(--c-on-accent)',
               surface: 'var(--c-surface)',
               'surface-hover': 'var(--c-surface-hover)',
               border: 'var(--c-border)',
@@ -47,6 +48,7 @@
         --c-secondary: #475569;
         --c-accent: #0ea5e9;
         --c-accent-hover: #0284c7;
+        --c-on-accent: #ffffff;
         --c-surface: #ffffff;
         --c-surface-hover: #ffffff;
         --c-border: #e2e8f0;
