--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
         --c-surface: #ffffff;
         --c-surface-hover: #ffffff;
         --c-border: #e2e8f0;
-        --c-bg-page: linear-gradient(135deg, #f0f9ff 0%, #e0f2fe 100%);
+        /* Darker, radial light blue gradient */
+        --c-bg-page: radial-gradient(circle at 50% 0%, #eff6ff 0%, #60a5fa 100%);
         --c-accent-light: #f0f9ff;
         --c-shadow-text: #bae6fd;
         --c-shadow-glow: rgba(14, 165, 233, 0.15);
